@@ -1,5 +1,5 @@
 /* Avoid redefinition of global variables; just declare them */
 /* Omit also main source file specific stuff */
 
-#define SKIP_MAIN_FILE_DECLARATIONS
+#define SKIP_GLOBALS_CREATION
 #include "common.h"
