@@ -3,28 +3,15 @@
  */
 
 /*
- * Copyright (C) 2016 the Free Software Foundation, Inc.
+ * Copyright (C) 2018 the Free Software Foundation, Inc.
  *
- * This file is part of GAWK-CSV, the GAWK extension for handling CSV data.
+ * This file is part of gawk-csv, the GAWK extension for handling CSV data.
  * 
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA
  */
 
-//#include <stdio.h>
-//#include "common.h"
-// #if 0
-// #include "config.h"
-// #include <string.h>
-// #include <stdlib.h>
-// #include <stdio.h>
-// #include <unistd.h>
-// #include <sys/stat.h>
-// #include <gawkapi.h>
-// extern const gawk_api_t *api;	/* for convenience macros to work */
-// extern awk_ext_id_t ext_id;
-// #endif
 #include "csv_parser.h"
 
 /* Parser states */
@@ -40,8 +27,6 @@
  *  from a generic source stream into a generic output structure */
 void
 csv_parse(csv_parser_p p) {
-//fprintf(stderr, "api-3:%d, id-3:%d\n", api, ext_id);
-//printf("parse\n");
     int state = BEFORE_FIELD;  /* Current parser state */
     int c = p->next_char();    /* The character we are currently processing */
 
@@ -49,18 +34,12 @@ csv_parse(csv_parser_p p) {
     while (c) {
         switch (state) {
           case AFTER_DELIM:
-//            if (c==CSV_LF) {
-//                p->begin_field();
-//                p->end_field();
-//            }
           case BEFORE_FIELD:
-//          case AFTER_FIELD:
             if (c==p->delim_char) {
                 p->begin_field();
                 p->end_field();
                 state = AFTER_DELIM;
             } else if (c==CSV_LF) {
-//                state = AFTER_FIELD;
                 c = CSV_NULL;
             } else if (c==p->quote_char) {
                 p->begin_field();
@@ -91,7 +70,6 @@ csv_parse(csv_parser_p p) {
                 c = CSV_NULL;
             } else {
                 p->error("Unexpected character");
-//                warning(ext_id, "Unexpected character <%c>", c);
                 p->put_char(p->quote_char);
                 p->put_char(c);
                 state = IN_UNQUOTED_FIELD;
